divs overflow fixed

--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Abel);
 @import url(http://fonts.googleapis.com/css?family=Lato);
 
-html {
-  height: 100%;
-  overflow: hidden;
-}
-
-#top {
-  background: transparent;
-  position: relative;
-}
-
 nav div {
  display: inline-block;
 }
@@ -38,14 +28,6 @@ nav a {
   text-shadow: 3px 3px #000021;
 }
 
-body { 
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  background-color: transparent;
-}
 
 #logo img {
   padding-left: 5%;
@@ -57,11 +39,16 @@ body {
 
 
 #mission {
-  height: 100%;
+  height: 100vh;
+  overflow: hidden;
   background-image: url("../img/MedDevCo Background1.jpg");
   background-attachment: fixed; 
   -webkit-background-size: cover;
-  background-color: transparent; 
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 #tagline {
@@ -77,7 +64,6 @@ body {
   }
 
 #blurb {
-  height: 60vh;
   background-color: white;
   text-align: center;
   font-size: 2em;
@@ -85,6 +71,7 @@ body {
   text-align: center;
   margin: 0 auto;
   padding: 2% 20%;
+  overflow: auto;
 }
 
 #blurb h1 {
@@ -99,11 +86,11 @@ body {
 }
 
 #team {
-  height: 230vh;
   background: #222;
   color: white;
   text-align: center;
   padding-top: 3%;
+  overflow: auto;
 }
 
 #team h1 {
@@ -115,6 +102,7 @@ body {
     box-sizing: border-box;
     margin: 0 auto;
     position: relative;
+    overflow: auto;
 }
 
 .gallery div {
